<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/userForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:id="@+id/keyImage"
                    android:background="@drawable/ic_vpn_key_black_24dp"
                    android:backgroundTint="@color/colorPrimary" />

                <EditText
                    android:id="@+id/regFullName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_input"
                    android:hint="@string/full_name"
                    android:inputType="textAutoComplete|textPersonName"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    tools:ignore="RtlCompat,RtlSymmetry" />

                <EditText
                    android:id="@+id/regEmail"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_input"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress|textAutoComplete"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/regPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_input"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />


                <EditText
                    android:id="@+id/regRepassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_input"
                    android:hint="@string/prompt_password2"
                    android:imeActionId="6"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/genderGroup"
                    android:background="@drawable/round_input"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="@color/colorPrimary" />
                </RadioGroup>

                <Button
                    android:id="@+id/regSignUp"
                    android:layout_width="130dp"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/green_button"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/colorPrimary" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    tools:ignore="UselessLeaf" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/status"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>


    </android.support.v7.widget.CardView>

</ScrollView>