<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/userForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/ic_lock_black_24dp"
                    android:backgroundTint="@color/colorPrimary" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_input"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress|textAutoComplete"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_input"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:singleLine="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/email_sign"
                        android:layout_width="130dp"
                        android:layout_height="45dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/green_button"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:text="Forgot Password"
                        android:id="@+id/forgotPassword"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    tools:ignore="UselessLeaf" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/status"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>


    </android.support.v7.widget.CardView>

</ScrollView>